macros/tests/no_supertrait.stderr
error: custom attribute panicked
 --> $DIR/no_supertrait.rs:3:1
  |
3 | #[com_interface("cc2d05c7-7d20-4ccb-ad75-1e7fb7c77254")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: All interfaces must inherit from another COM interface
